Fix e2e test and compile error